# fastapi_webapp

./: .gitignore  docker-compose.yml  hello.py  pyproject.toml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/api/dependencies/: auth.py
backend/app/api/routes/: cleanings.py  profiles.py  users.py
backend/app/core/: config.py
backend/app/db/: tasks.py
backend/app/db/migrations/versions/: 2d34c9828b37_create_main_tables.py
backend/app/db/repositories/: cleanings.py  profiles.py  users.py
backend/app/models/: profile.py  token.py  user.py
backend/app/services/: authentication.py
backend/tests/: conftest.py  test_cleanings.py  test_profiles.py  test_users.py
