[project]
dependencies = [
    "fastapi==0.55.1",
    "uvicorn==0.34.0",
    "pydantic==1.4",
    "email-validator==1.1.1",
    "databases[postgresql]==0.4.2",
    "SQLAlchemy==1.3.16",
    "alembic==1.4.2",
]
name = "fastapi-webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
