[project]
name = "fastapi-webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # app
    "fastapi==0.55.1",
    "uvicorn==0.34.0",
    "pydantic==1.4",
    "email-validator==1.1.1",
    "python-multipart==0.0.5",
    # db
    "databases[postgresql]==0.4.2",
    "SQLAlchemy==1.3.16",
    "alembic==1.4.2",
    # auth
    "pyjwt==2.0.1",
    "passlib[bcrypt]==1.7.2",
    # dev
    "pytest==7.2.1",
    "pytest-asyncio==0.14.0",
    "httpx==0.23.2",
    "asgi-lifespan==1.0.1",
    "psycopg2-binary",
]

[build-system]
# A list of packages that are needed to build your package:
requires = ["setuptools", "wheel"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
